# ClipIt

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  commit  config.h.in  configure  configure.ac  configure.in  meson.build  meson_options.txt  pre-release.sh  update-po
.tx/: config
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  clipit-startup.desktop.in  clipit.desktop.in
doc/: Makefile.am  Makefile.in  clipit.1
m4/: ChangeLog  Makefile.in
po/: LINGUAS  POTFILES.in  bg.po  ca.po  clipit.pot  cs.po  da.po  de.po  es.po  es_ES.po  es_MX.po  et.po  fi.po  fr.po  fr_FR.po  gl_ES.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  lt.po  meson.build  nb.po  nl_NL.po  pl.po  pl_PL.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  clipit-i18n.h  daemon.c  daemon.h  eggaccelerators.c  eggaccelerators.h  history.c  history.h  keybinder.c  keybinder.h  main.c  main.h  manage.c  manage.h  preferences.c  preferences.h  utils.c  utils.h
